--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: dqrules
 Title: Form association rules for health Data
-Version: 0.0.2
-Authors@R: person(“Mingkai”, “Peng”, email = “mpeng@ucalgary.ca", role = c("aut", "cre"))
+Version: 0.0.3
+Authors@R: c(person("Mingkai", "Peng", role = c("aut", "cre"), email = "mpeng@ucalgary.ca"))
 Description: Form association rules for health Data
 Depends: R (>= 3.4.0), dplyr
 License: What license is it under?
